fix: wrong color of (plugin) delete button

--- a/styles/bstats/catppuccin.user.css
+++ b/styles/bstats/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name bStats Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/bstats
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/bstats
-@version 0.2.0
+@version 0.2.1
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/bstats/catppuccin.user.css
 @description Soothing pastel theme for bStats
 @author Catppuccin
@@ -287,6 +287,9 @@
     .red-text {
       color: @red !important;
     }
+    .red {
+      background-color: @red;
+    }
 
     /* discord logo on homepage */
     img[src="/images/discord.svg"] when (@flavor=latte) {
@@ -392,13 +395,15 @@
     [disabled].btn-large,
     .btn-floating[disabled],
     .btn-large[disabled],
-    .btn-flat[disabled] {
+    .btn-flat[disabled],
+    .btn-large.red[disabled],
+    .btn-large.red.disabled[id="delete_button"] {
       background-color: @mantle !important;
       color: @subtext0 !important;
     }
-
-    .btn-large.red {
-      background-color: darken(@red, 30%) !important;
+    .btn-large.red[id="delete_button"] {
+      color: @mantle !important;
+      background-color: @red !important;
     }
 
     .card {
